# solana_tasks

./: .gitignore
task1/: Cargo.toml  config.yaml
task1/src/: main.rs
task2/: Cargo.toml  config.yaml
task2/src/: main.rs
task3/: Cargo.toml  config.yaml
task3/src/: main.rs
task4/solana_savings/: Anchor.toml  README.md
task4/solana_savings/programs/solana_savings/: Cargo.toml
task4/solana_savings/programs/solana_savings/src/: lib.rs
task4/solana_savings/tests/: solana_savings.ts
