[package]
name = "task3"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.217", features = ["derive"]}
serde_yaml = "0.9.34"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = {version = "0.12.3", features = ["tls"]}
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = "4.1.1"